# cad_homework

./: .gitignore  CMakeLists.txt  README.md
scripts/: 123.py  bezier_curve.py  bezier_surface.py
src/: AMain.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Curve.cpp  Curve.h  DrawScene.cpp  DrawScene.h  Surface.cpp  Surface.h  Vector3D.cpp  Vector3D.h
src/process/: CMakeLists.txt
